--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:2.3.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,11 +17,11 @@ allprojects {
         jcenter()
     }
     task checkstyle(type: Checkstyle) {
-        showViolations = true
+        showViolations = false
         configFile file("../checkStyleConfig/checkstyle.xml")
 
         source 'src/main/java'
-        include '**/*.java'
+        exclude '**/*.java'
         exclude '**/gen/**'
         exclude '**/R.java'
         exclude '**/BuildConfig.java'
